Collapse bg fixed + Housings

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -1,7 +1,7 @@
 .collapse {
 	position: relative;
 	overflow: hidden;
-	background-color: rgba(246, 246, 246, 0.45);
+	
 	border-radius: 5px;
 
 	.arrow-up {
